# bloomsage-models-usage-demo

./: .gitignore  README.md
backend/: .env  main.py  ml_fetch.py  pyproject.toml  requirements.txt
backend/backend/: main.py  ml_pipeline.py
backend/backend/util/: input_processing.py
backend/machine_learning/: pipeline.py
backend/machine_learning/util/: input_processing.py
frontend/: .env  features.py  main.py  pyproject.toml  requirements.txt
frontend/.streamlit/: config.toml
mockup-ecommerce/: app.py  requirements.txt
mockup-ecommerce/static/: style.css
mockup-ecommerce/templates/: index.html  product_detail.html
